[tool.poetry]
name = "pomodoro"
version = "0.1.0"
description = "Simple command line pomodoro timer using only Python stdlib"
authors = ["divusmetaphysica <divusmetaphysica@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
